PIG-892: Make COUNT and AVG deal with nulls accordingly with SQL standart(olgan)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/pig/trunk@804406 13f79535-47bb-0310-9956-ffa450edef68